<resources>
    <string name="app_name">Memo</string>

    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="text_info">Info</string>

    <string name="search">Recherche</string>
    <string name="language">Langues</string>
    <string name="dictionary">Dictionnaire</string>
    <string name="save">Sauvegarde</string>
    <string name="save_list">Mes sauvegardes</string>
    <string name="settings">Parametres</string>
</resources>