<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_language"
          android:title="@string/language"
    android:icon="@drawable/ic_baseline_language_24"/>

    <item android:id="@+id/nav_dictionary"
          android:title="@string/dictionary"
          android:icon="@drawable/ic_baseline_translate_24"
    />

    <item android:id="@+id/nav_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        />

    <item android:id="@+id/nav_save"
        android:title="@string/save"
        android:icon="@drawable/ic_baseline_save_24"
        />

    <item android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        />
</menu>